--- a/.github/workflows/vector-update.yml
+++ b/.github/workflows/vector-update.yml
@@ -94,20 +94,119 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     steps:
-      - name: Notify Slack on success
+      - name: Notify Interactive Turbo Telescope Channel
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_INTERACTIVE_TURBO_TELESCOPE }}
+          SLACK_MESSAGE: |
+            🔭 **Interactive Turbo Telescope - CI/CD Update**
+            
+            ${{ needs.process-vectors.result == 'success' && '✅ **Success**: Vector database updated!' || '❌ **Failed**: Vector processing encountered an error!' }}
+            
+            📁 **Data Source**: Files from data/ directory
+            🤖 **Processing**: OpenAI embeddings + Anthropic + Pinecone storage
+            👨‍💻 **Triggered by**: ${{ github.actor }}
+            🌿 **Branch**: ${{ github.ref_name }}
+            📝 **Commit**: `${{ github.sha }}`
+            
+            ${{ needs.process-vectors.result == 'success' && '🎯 Your telescope data is now searchable via vector similarity!' || '🔧 Check the logs for debugging details:' }}
+            🔗 **View Details**: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          SLACK_TITLE: "🚀 Turbo Telescope CI/CD"
+          SLACK_COLOR: ${{ needs.process-vectors.result == 'success' && 'good' || 'danger' }}
+          SLACK_FOOTER: "Interactive Turbo Telescope Project"data/' | jq -R -s -c 'split("\n")[:-1]')
+            echo "changed_files=$CHANGED" >> $GITHUB_OUTPUT
+            echo "force_rebuild=false" >> $GITHUB_OUTPUT
+          fi
+      
+      - name: Process all files and update vectors
+        env:
+          PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
+          PINECONE_ENVIRONMENT: ${{ secrets.PINECONE_ENVIRONMENT }}
+          PINECONE_INDEX_NAME: ${{ secrets.PINECONE_INDEX_NAME }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          python ci_vector_processor.py \
+            --changed-files '${{ steps.changes.outputs.changed_files }}' \
+            --force-rebuild '${{ steps.changes.outputs.force_rebuild }}' \
+            --data-dir './data' \
+            --upload-to-pinecone
+      
+      - name: Upload vector database
+        uses: actions/upload-artifact@v4
+        with:
+          name: vector-database
+          path: ${{ env.CHROMA_PERSIST_DIR }}
+          retention-days: 30
+      
+      - name: Upload processing results
+        uses: actions/upload-artifact@v4
+        with:
+          name: processing-results
+          path: processing_results.json
+
+  slack-notifications:
+    needs: process-vectors
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      # General channel - Simple success/failure summary
+      - name: Notify General Channel
+        if: always()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_GENERAL }}
+          SLACK_MESSAGE: |
+            ${{ needs.process-vectors.result == 'success' && '✅ Vector database updated successfully!' || '❌ Vector processing failed!' }}
+            Repository: ${{ github.repository }}
+            Commit: ${{ github.sha }}
+          SLACK_TITLE: "Turbo RAG Update"
+          SLACK_COLOR: ${{ needs.process-vectors.result == 'success' && 'good' || 'danger' }}
+      
+      # Tech Talk channel - Technical details
+      - name: Notify Tech Talk Channel
         if: needs.process-vectors.result == 'success'
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_TECH_TALK }}
           SLACK_MESSAGE: |
-            ✅ Vector database updated successfully!
-            Commit: ${{ github.sha }}
+            🔧 **Technical Update: Vector Processing**
+            ✅ Status: Success
+            📊 Pinecone vectors updated with new embeddings
+            🤖 Using: OpenAI embeddings + Anthropic processing
+            📁 Processed files from data/ directory
+            🔗 Details: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          SLACK_TITLE: "Vector DB Technical Update"
+          SLACK_COLOR: "good"
       
-      - name: Notify Slack on failure
-        if: needs.process-vectors.result == 'failure'
+      # Turbo Construction channel - Build/deployment info
+      - name: Notify Turbo Construction Channel
+        if: always()
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_TURBO_CONSTRUCTION }}
           SLACK_MESSAGE: |
-            ❌ Vector database update failed!
-            Check logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            🏗️ **CI/CD Pipeline Update**
+            Status: ${{ needs.process-vectors.result == 'success' && '✅ Success' || '❌ Failed' }}
+            Pipeline: Vector Database Processing
+            Trigger: ${{ github.event_name }}
+            Branch: ${{ github.ref_name }}
+            ${{ needs.process-vectors.result == 'failure' && '🔗 Debug logs: ' || '📦 Artifacts available: ' }}${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          SLACK_TITLE: "Build Pipeline Status"
+          SLACK_COLOR: ${{ needs.process-vectors.result == 'success' && 'good' || 'danger' }}
+      
+      # Random channel - Fun notification (only on success)
+      - name: Notify Random Channel
+        if: needs.process-vectors.result == 'success'
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_RANDOM }}
+          SLACK_MESSAGE: |
+            🎉 The robots are happy! 🤖✨
+            Just fed some fresh data to our AI overlords... I mean, vector database! 📊
+            
+            Fun fact: Your vectors are now living their best life in Pinecone! 🌲
+            
+            Commit by: ${{ github.actor }} 👨‍💻
+          SLACK_TITLE: "🚀 Vector Success Party!"
+          SLACK_COLOR: "good"
