--- a/.github/workflows/vector-update.yml
+++ b/.github/workflows/vector-update.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install pinecone-client anthropic openai
+          pip install pinecone anthropic openai
       
       - name: Download existing vector DB
         uses: actions/cache@v4
